# foreign-library-bug

./: Adder.def  CHANGELOG.md  README.md  default.nix  foreign-library-bug.cabal  pkgs.nix  shell.nix
lib/: Adder.hs
