cabal-version:      3.0
name:               foreign-library-bug
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Joe Betz
maintainer:         joebetz91@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

foreign-library adder
    build-depends:    base
    type:             native-shared
    other-modules:    Adder
    options: standalone
    mod-def-file:  Adder.def
    hs-source-dirs:   lib